2025-01-02_add_distribuited_id_generator

--- a/spring-creed-pom/spring-creed-pro/spring-creed-dependencies/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-dependencies/pom.xml
@@ -197,6 +197,11 @@
                 <artifactId>spring-creed-common</artifactId>
                 <version>${spring-creed-boot.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.ethan</groupId>
+                <artifactId>spring-creed-starter-id-gen</artifactId>
+                <version>${spring-creed-boot.version}</version>
+            </dependency>
 
 <!--            <dependency>-->
 <!--                <groupId>org.mariadb.jdbc</groupId>-->
