--- a/spring-creed-pom/spring-creed-pro/spring-creed-module-system/spring-creed-module-system-biz/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-module-system/spring-creed-module-system-biz/pom.xml
@@ -34,6 +34,10 @@
             <groupId>com.ethan</groupId>
             <artifactId>spring-creed-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.ethan</groupId>
+            <artifactId>spring-creed-starter-id-gen</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.ethan</groupId>
