2025-02-11_使用javaagent_修改项目字节码技术探索

--- a/spring-creed-pom/spring-creed-pro/spring-creed-server/src/main/resources/application.yml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-server/src/main/resources/application.yml
@@ -14,7 +14,7 @@ logging:
         stat: DEBUG
 spring:
   profiles:
-    active: redis,shardingsphere
+    active: redis,shardingsphere,jpa
   application:
     name: spring-creed-server
   datasource:
@@ -47,6 +47,12 @@ spring:
     encoding: UTF-8
     fallback-to-system-locale: true
     cache-duration: 1s
+
+  servlet:
+    multipart:
+#      location: ${ms.app.home.dir}/tmp
+      max-file-size: 10MB
+      file-size-threshold: 10MB
 #logging:
 #  level:
 #    org:
