--- a/spring-creed-pom/spring-creed-pro/spring-creed-agent/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-agent/pom.xml
@@ -63,8 +63,10 @@
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
         <dependency>
             <groupId>net.bytebuddy</groupId>
