2025-02-20_json_schema_validator_update

--- a/spring-creed-pom/spring-creed-pro/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/pom.xml
@@ -18,6 +18,7 @@
         <module>spring-creed-example</module>
         <module>spring-creed-module-infra</module>
         <module>spring-creed-agent</module>
+        <module>spring-creed-example/spring-creed-example-validator</module>
     </modules>
     <packaging>pom</packaging>
 
