--- a/spring-creed-pom/spring-creed-pro/spring-creed-framework/spring-creed-starter-web/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-framework/spring-creed-starter-web/pom.xml
@@ -38,6 +38,11 @@
             <version>13.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>json-schema-validator</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
