--- a/spring-creed-pom/spring-creed-pro/spring-creed-example/spring-creed-example-jpa/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-example/spring-creed-example-jpa/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+<!--        working with dsl-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
