2025-03-21-使用JpaSpecificationExecutor解决n+1+动态分页查询问题-使用HttpExchange调用RestTemplate

--- a/spring-creed-pom/spring-creed-pro/spring-creed-server/src/main/resources/application.yml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-server/src/main/resources/application.yml
@@ -6,12 +6,12 @@ server:
 logging:
   level:
     root: info
-    org:
-      redisson:
-        command:
-          RedisExecutor: info
-      hibernate:
-        stat: DEBUG
+    org.redisson.command.RedisExecutor: info
+    org.hibernate.stat: DEBUG
+    org.hibernate.orm.results: INFO
+    org.hibernate.orm.jdbc.bind: trace
+    org.springframework.jdbc.core.StatementCreatorUtils: TRACE
+    org.springframework.jdbc.core.JdbcTemplate: DEBUG
 spring:
   profiles:
     active: redis,shardingsphere,jpa
