--- a/spring-creed-pom/spring-creed-pro/spring-creed-example/spring-creed-example-jpa/src/main/resources/application.yml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-example/spring-creed-example-jpa/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
   data:
     web:
       pageable:
