--- a/spring-creed-pom/spring-creed-pro/spring-creed-example/spring-creed-example-ssl/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-example/spring-creed-example-ssl/pom.xml
@@ -4,24 +4,26 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.ethan</groupId>
-        <artifactId>spring-creed-pro</artifactId>
+        <groupId>com.ethan.example</groupId>
+        <artifactId>spring-creed-example</artifactId>
         <version>${revision}</version>
     </parent>
 
-    <groupId>com.ethan.example</groupId>
-    <artifactId>spring-creed-example</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>spring-creed-example-jpa</module>
-        <module>spring-creed-example-validator</module>
-        <module>spring-creed-example-ssl</module>
-    </modules>
+    <artifactId>spring-creed-example-ssl</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
