--- a/spring-creed-pom/spring-creed-pro/spring-creed-server/src/main/resources/application-jpa.yml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-server/src/main/resources/application-jpa.yml
@@ -6,4 +6,10 @@ spring:
       ddl-auto: none
 #    properties:
 #      hibernate:
-#        generate_statistics: true
+#        generate_statistics: true #统计数据
+logging:
+  level:
+    org.hibernate.orm: info
+    org.hibernate.orm.jdbc.bind: trace
+    org.springframework.jdbc.core.StatementCreatorUtils: TRACE
+    org.springframework.jdbc.core.JdbcTemplate: DEBUG
