--- a/spring-creed-dependencies/pom.xml
+++ b/spring-creed-dependencies/pom.xml
@@ -276,6 +276,12 @@
                 <version>${json-schema-validator.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>3.2.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
