--- a/spring-creed-example/spring-creed-example-local-cache/pom.xml
+++ b/spring-creed-example/spring-creed-example-local-cache/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>transmittable-thread-local</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
