--- a/spring-creed-example/spring-creed-dubbo-component/spring-creed-dubbo-consumer/pom.xml
+++ b/spring-creed-example/spring-creed-dubbo-component/spring-creed-dubbo-consumer/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.ethan.example</groupId>
             <artifactId>spring-creed-dubbo-api</artifactId>
-            <version>1.1.0</version>
+            <version>${revision}</version>
         </dependency>
     </dependencies>
 
