--- a/spring-creed-example/spring-creed-cloud-config-server/src/main/resources/application.yml
+++ b/spring-creed-example/spring-creed-cloud-config-server/src/main/resources/application.yml
@@ -37,7 +37,7 @@ management:
 #    defaults:
 #      enabled: false
 #    ping:
-encrypt:
-  key-store:
-    alias:
-#      enabled: true
+#encrypt:
+#  salt: deadbeef
+#  key-store:
+#    secret:
