--- a/spring-creed-example/spring-creed-cloud-config-server/pom.xml
+++ b/spring-creed-example/spring-creed-cloud-config-server/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>jackson-dataformat-properties</artifactId>
             <version>2.18.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>10.3</version>
+        </dependency>
 
         <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
